--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,6 +28,7 @@
                 Theme designed by <a href="https://github.com/Gaohaoyang">HyG</a>.
             </span>
         </p>
+	{% include music.html %}
     </div>
 </footer>
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
