--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,9 +45,9 @@ layout: default
             {% assign postHasSimilar = false %}
             {% for tag in post.tags %}
                 {% for thisTag in page.tags %}
-                    {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+                    {% if postHasSimilar == false and hasSimilar.size < 3 and post != page and tag == thisTag %}
                         {% if hasSimilar.size == 0 %}
-                        <h2 id="similar_posts">Similar Posts</h2>
+                        <h2 id="similar_posts">相似文章</h2>
                         <ul>
                         {% endif %}
                         <li class="relatedPost">
